# Health-Care-Backend

./: .env.example  .flake8  .gitignore  .sonarlintignore  README.md  docker-compose.yml  sonar-project.properties
.github/workflows/: auto-pr-to-develop.yml  ci-cd.yml
AI Service/: fetch_knowledge_base.py
Appointment Service/: Dockerfile  main.py  requirements.txt
Appointment Service/Application/: dtos.py  exceptions.py
Appointment Service/Domain/: __init__.py
Appointment Service/alembic/: env.py
Appointment Service/infrastructure/: config.py
Auth service/: Dockerfile  main.py  requirements.txt
Doctor Service/: .env.example  Dockerfile  main.py  requirements.txt
Notifiaction Service/: Dockerfile  main.py  requirements.txt
Notification Service/: Dockerfile  main.py
Patient Service/: Dockerfile  main.py  requirements.txt
Payment Service/: Dockerfile  main.py  requirements.txt
kong/: Dockerfile.rabbitmq  kong.yml
scripts/: docs_hub.html  init-db.sh  kong-entrypoint.sh  run-unit-coverage.ps1  run-unit-tests.ps1  seed_admin.py
shared/: README.md  STRUCTURE.md
shared/healthai-cache/: pyproject.toml
shared/healthai-cache/healthai_cache/: __init__.py  client.py  idempotency.py  lock.py  stampede.py
shared/healthai-cache/tests/: test_cache_client.py  test_cache_lock.py  test_cache_utils.py  test_idempotency_unit.py  test_lock.py
shared/healthai-common/: pyproject.toml
shared/healthai-common/healthai_common/: __init__.py  circuit_breaker.py  idempotency.py  saga.py  uuid_utils.py
shared/healthai-common/tests/: test_common_circuit_breaker.py  test_common_idempotency_decorator.py  test_common_saga.py  test_uuid_utils.py
shared/healthai-db/: pyproject.toml
shared/healthai-db/healthai_db/: __init__.py  base.py  outbox.py  session.py
shared/healthai-db/tests/: test_db_session.py  test_outbox.py
shared/healthai-events/: pyproject.toml
shared/healthai-events/healthai_events/: __init__.py  consumer.py  exceptions.py  publisher.py  relay.py
shared/healthai-events/tests/: test_events_consumer.py  test_events_relay.py  test_events_relay_extra.py  test_exceptions.py
shared_lib/: setup.py
tests/: README.md  conftest.py  pytest.ini
(+446 files in other folders)
